src/objects/BillRate__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Bill Rates</relationshipLabel>
        <relationshipName>BillRatesAgreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillRateEnd__c</fullName>
        <label>BillRateEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillRatePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Rate Period</label>
        <referenceTo>BillRatePeriod__c</referenceTo>
        <relationshipLabel>Bill Rates</relationshipLabel>
        <relationshipName>BillRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillRateStart__c</fullName>
        <label>BillRateStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillRate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LaborCategory__c</fullName>
        <label>Labor Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Bill Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>